--- a/web_app/templates/layout.html
+++ b/web_app/templates/layout.html
@@ -11,17 +11,18 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="/">JeefHS</a>
+            <a class="navbar-brand" href="{{ url_for('home') }}">JeefHS</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="/">Dashboard</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/environment">Environment</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/security">Security</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/devices">Devices</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('home') }}">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('dashboard') }}">Dashboard</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('environment') }}">Environment</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('security') }}">Security</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('devices') }}">Devices</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('about') }}">About</a></li>
                 </ul>
             </div>
         </div>
